@@ -739,15 +739,24 @@ GetUPNPUrls(struct UPNPUrls * urls, struct IGDdatas * data,
 {
 	char * p;
 	int n1, n2, n3, n4;
+#ifdef IF_NAMESIZE
 	char ifname[IF_NAMESIZE];
+#else
+	char scope_str[8];
+#endif
 
 	n1 = strlen(data->urlbase);
 	if(n1==0)
 		n1 = strlen(descURL);
 	if(scope_id != 0) {
+#ifdef IF_NAMESIZE
 		if(if_indextoname(scope_id, ifname)) {
 			n1 += 3 + strlen(ifname);	/* 3 == strlen(%25) */
 		}
+#else
+	/* under windows, scope is numerical */
+	snprintf(scope_str, sizeof(scope_str), "%u", scope_id);
+#endif
 	}
 	n1 += 2;	/* 1 byte more for Null terminator, 1 byte for '/' if needed */
 	n2 = n1; n3 = n1; n4 = n1;
@@ -778,9 +787,15 @@ GetUPNPUrls(struct UPNPUrls * urls, struct IGDdatas * data,
 			p = strchr(urls->ipcondescURL, ']');
 			if(p) {
 				/* insert %25<scope> into URL */
+#ifdef IF_NAMESIZE
 				memmove(p + 3 + strlen(ifname), p, strlen(p) + 1);
 				memcpy(p, "%25", 3);
 				memcpy(p + 3, ifname, strlen(ifname));
+#else
+				memmove(p + 3 + strlen(scope_str), p, strlen(p) + 1);
+				memcpy(p, "%25", 3);
+				memcpy(p + 3, scope_str, strlen(scope_str));
+#endif
 			}
 		}
 	}
